--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.7"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19"
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"bootstrap": "^5.3.3",
+		"jose": "^5.10.0",
+		"next": "15.1.7",
+		"react": "^19.0.0",
+		"react-bootstrap": "^2.10.9",
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
+		"swiper": "^11.2.4",
+		"swr": "^2.3.2",
+		"zustand": "^5.0.3"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"typescript": "^5"
+	}
 }
