--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"eslint": "9.21.0",
+		"eslint-config-next": "15.1.7",
 		"typescript": "^5"
 	}
 }
