--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
-		"build": "next build",
+		"build": "next build --experimental-debug-memory-usage",
 		"start": "next start",
 		"lint": "next lint"
 	},
