--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
-		"build": "next build --experimental-debug-memory-usage",
-		"start": "next start",
+		"build": "NODE_OPTIONS='--max-old-space-size=4096' next build --experimental-debug-memory-usage",
+		"start": "NODE_OPTIONS='--max-old-space-size=4096' next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
