--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "set NODE_OPTIONS=--inspect && next dev --turbopack",
 		"build": "NODE_OPTIONS='--max-old-space-size=2048' next build --experimental-debug-memory-usage",
 		"start": "NODE_OPTIONS='--max-old-space-size=2048' next start",
 		"lint": "next lint"
